Fixed media panel so that markup tooltip doesn't break on scroll

--- a/css/common.css
+++ b/css/common.css
@@ -100,7 +100,7 @@ button {
 }
 
 #scrolling-container, #media-panel {
-  height: 80vh;
+  /* height: 80vh; */
 }
 
 #editor-container {
